Fix footer link alignment

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -138,7 +138,7 @@ footer {
   
   .footer-links {
     grid-column: start / end;
-    align-items: center;
+    align-items: end;
 
     span, ul a {
       color: var(--clr-text-secondary);
